; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_layer_shell.c_popup_handle_new_popup.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_layer_shell.c_popup_handle_new_popup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_layer_popup = type { i32 }
%struct.wl_listener = type { i32 }
%struct.wlr_xdg_popup = type { i32 }

@new_popup = common dso_local global i32 0, align 4
@LAYER_PARENT_POPUP = common dso_local global i32 0, align 4
@sway_layer_popup = common dso_local global %struct.sway_layer_popup* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @popup_handle_new_popup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @popup_handle_new_popup(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_layer_popup*, align 8
  %6 = alloca %struct.wlr_xdg_popup*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %8 = load %struct.sway_layer_popup*, %struct.sway_layer_popup** %5, align 8
  %9 = ptrtoint %struct.sway_layer_popup* %8 to i32
  %10 = load i32, i32* @new_popup, align 4
  %11 = call %struct.sway_layer_popup* @wl_container_of(%struct.wl_listener* %7, i32 %9, i32 %10)
  store %struct.sway_layer_popup* %11, %struct.sway_layer_popup** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to %struct.wlr_xdg_popup*
  store %struct.wlr_xdg_popup* %13, %struct.wlr_xdg_popup** %6, align 8
  %14 = load %struct.wlr_xdg_popup*, %struct.wlr_xdg_popup** %6, align 8
  %15 = load i32, i32* @LAYER_PARENT_POPUP, align 4
  %16 = load %struct.sway_layer_popup*, %struct.sway_layer_popup** %5, align 8
  %17 = call i32 @create_popup(%struct.wlr_xdg_popup* %14, i32 %15, %struct.sway_layer_popup* %16)
  ret void
}

declare dso_local %struct.sway_layer_popup* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @create_popup(%struct.wlr_xdg_popup*, i32, %struct.sway_layer_popup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
